--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=App_Data/local.db"
   },
+  "Scoring": {
+    "UncertaintyThreshold": 0.6
+  },
   "AllowedHosts": "*"
 }
