feat: Implement budget line validation and caching service
- Added migration to enforce BudgetLineId as required in TransactionSplits and removed CategoryId.
- Created BudgetAccountLookupService for validating budget line to account relationships with caching.
- Introduced CacheKeyTracker for pattern-based cache invalidation.
- Defined IBudgetAccountLookupService interface for budget line account lookups.
- Implemented ICacheKeyTracker interface for tracking cache keys.
- Updated user story documentation for account-budget matching enforcement.
- Added integration tests for cross-account budget line validation.
- Created unit tests for BudgetAccountLookupService caching functionality.

--- a/LocalFinanceManager/appsettings.json
+++ b/LocalFinanceManager/appsettings.json
@@ -34,5 +34,10 @@
     "MaxRetries": 5,
     "AutoApplyEnabled": false,
     "BatchSize": 100
+  },
+  "Caching": {
+    "AbsoluteExpirationMinutes": 5,
+    "SlidingExpirationMinutes": 2,
+    "SizeLimit": 1000
   }
 }
