--- a/LocalFinanceManager/appsettings.Development.json
+++ b/LocalFinanceManager/appsettings.Development.json
@@ -7,7 +7,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "LocalFinanceManager.Data.Repositories": "Information"
     }
   }
 }
